--- a/ui.html
+++ b/ui.html
@@ -161,7 +161,6 @@ window.onmessage = (event) => {
                 }}, '*');
             }
         } else if (dataType === 'image') {
-            console.log(files);
             // Checking all files is image.
             let allFileIsImage = Array.from(files).every(function(file) {
                 return ['image/png', 'image/jpeg', 'image/jpg'].includes(file.type);
@@ -255,7 +254,7 @@ window.onmessage = (event) => {
     }
 
     function sliceArrayWithLength(array, length) {
-        let newArray = [];
+        let newArray = array.slice();
         while (newArray.length <= length) {
             newArray = newArray.concat(array);
         }
@@ -266,15 +265,9 @@ window.onmessage = (event) => {
     }
 
     function sliceFileListWithLength(files, length) {
-        let newArray = [];
-        if (length > files.length) {
-            for (let i = 0; i < files.length * Math.ceil(length / files.length); i++) {
-                newArray.push(files[i % files.length]);
-            }
-        } else {
-            for (let i = 0; i < files.length; i++) {
-                newArray.push(files[i]);
-            }
+        let newArray = Array.from(files);
+        while (newArray.length <= length) {
+            newArray = newArray.concat(newArray);
         }
         if (randomOrderCheckBox.checked) {
             shuffle(newArray);
